2004-07-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* SConstruct:
	* flower/SConscript:
	* lily/SConscript: New file.

2004-07-05  Carl Sorensen  <carldsorensen@comcast.net>

	* scm/define-grob-properties.scm (all-user-grob-properties): Add
	descriptions for all fret-diagram properties.

	* scm/define-grob-interfaces.scm (fret-diagram-interface): Add
	fret-diagram interface code

2004-07-06  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* ly/book-paper-defaults.ly: set default encoding to ec.

	* buildscripts/guile-gnome.sh (OPT): only compile pango if not
	installed.

	* tex/latin1.enc: new file, from a2ps. 

2004-07-06  Heikki Junes  <hjunes@cc.hut.fi>

	* stepmake/bin/add-html-footer.py: use <div> instead of <table>,
	add a faint, green border line.

	* Documentation/index.html.in: drop <table>, add a faint border line.

2004-07-05  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/font.scm (add-cmr-fonts): upright caps is eccc.

	* Documentation/GNUmakefile (README_TOP_FILES): add THANKS.txt.

2004-07-02  Carl Sorensen  <carldsorensen@comcast.net>

	* scm/output-ps.scm (white-text): Add scale paramter to allow scaling

	* scm/output-tex.scm (white-text): Add scale parameter to allow font scaling

	* scm/stencil.scm (fontify-text-white) : Adjust to better center, properly
	scale white text

	* scm/fret-diagrams.scm (make-fret-diagram): change default dot position for numbered dots so dot will
	touch fret.
	(various routines): move to font-metric interface, rather than name, size interface.
	Clean up comments.

	* ps/music-drawing-routines.ps: (/draw_white_text)  Adjust font
	size and offset to better center white text.

2004-07-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ChangeLog: Remove pre-2.1 changes.

	* Documentation/misc/ChangeLog-2.1: New file.

	* stepmake/bin/release.py: Cleanup.  Add release marker if missing
	from ChangeLog.

2004-07-05  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* input/test/chords-below-volta-bracket.ly,