@@ -12,9 +12,9 @@
 
 \paper  { raggedright = ##t }
 
-
+filler = \relative { e4 e }
 % 
-% #(ly:set-option 'debug-beam #t)
+#(ly:set-option 'debug-beam #t)
 
 assertquant =
 #(def-music-function (location l r) (pair? pair?)
@@ -25,43 +25,73 @@ assertquant =
    #}
    
 ))
-  
 
-\relative {
+
+
+
+primes = \relative {
+    \assertquant #'(0 . 0)  #'(0 . 0)
+    c8[ c]
+    \filler
+    \assertquant #'(1 . -1)  #'(1 . -1)
+    d8[ d]
+     
+    \filler
+     
     \assertquant #'(1 . 0)  #'(1 . 0)
     e8[ e]
-    e4 
-    e4 
+    \filler
+     
+     
     \assertquant #'(2 . -1)  #'(2 . -1)
     f8[ f]
-    e4 
-    e4 
+    \filler
+     
+     
     \assertquant #'(2 . 0)  #'(2 . 0)
     g8[ g]
-    e4 
-    e4 
+    \filler
+     
+     
     \assertquant #'(2 . 1)  #'(2 . 1)
     a8[ a]
-    e4 e4 e4
+    \filler
+      
     \once \override Beam #'inspect-quants = #'(2.2 . 2.2)
     a8[ a]
-    e4 
-    e4 
+    \filler
+}
 
-    \assertquant #'(0 . 1)  #'(1 . 0)
+seconds = \relative {
+    \assertquant #'(0 . 1)  #'(0 . 1)
+    c8[ d]
+    \filler
+     
+    \assertquant #'(1 . -1)  #'(1 . 0)
     d8[ e]
-    e4 
-    e4 
+    \filler
+     
+     
     \assertquant #'(1 . 0)  #'(1 . 1)
     e8[ f]
-    e4 
-    e4 
+    \filler
+     
+     
     \assertquant #'(2 . -1)  #'(2 . 0)
     f8[ g]
-    e4 
-    e4 
+    \filler
+     
+     
     \assertquant #'(2 . 0)  #'(2 . 1)
     g8[ a]
-    e4 
-    e4 
-    }
+    \filler
+
+    \assertquant #'(3 . -1)  #'(3 . 0)
+    a8[ b]
+    \filler
+}
+
+
+{ \primes \seconds }
+
+#(ly:set-option 'debug-beam #f)
