@@ -1,3 +1,8 @@
+2004-07-07  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* input/regression/beam-quant-standard.ly (seconds): print desired
+	quants when failing.
+
 2004-07-06  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* SConstruct:
